# stoneshapp

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.ts
.codex/skills/domain-modeling/: SKILL.md
.codex/skills/refactor-safe/: SKILL.md
.codex/skills/tauri-prep/: SKILL.md
.codex/skills/ui-feature/: SKILL.md
docs/: codex-skills.md  desktop-evolution.md  local-persistence.md  recommendation-engine.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx  router.tsx  routes.ts  screenMeta.ts
src/app/providers/: AppProviders.tsx
src/components/forms/: FormField.tsx  SwitchField.tsx
src/components/navigation/: SidebarNav.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Section.tsx  SectionHeader.tsx  (+1 more)
src/data/: dashboard.ts  navigation.ts  settings.ts
src/hooks/: useDocumentTitle.ts  useThemeMode.ts
src/layouts/: MainLayout.tsx
src/pages/: ContractDetailPage.tsx  ContractsPage.tsx  DashboardPage.tsx  HistoryPage.tsx  NotFoundPage.tsx  OverlaySettingsPage.tsx  PrepareRunPage.tsx  ProfilePage.tsx  SettingsPage.tsx
src/services/: contractsService.ts  dashboardService.ts  historyService.ts  overlayService.ts  preparationService.ts  profileService.ts  recommendationService.ts  settingsService.ts
src/styles/: index.css
src/test/: recommendationFixtures.ts  testStorage.ts
src/types/: dashboard.ts  navigation.ts  settings.ts
(+77 files in other folders)
