[package]
name = "stoneshapp"
version = "0.1.0"
description = "Desktop companion app for Stoneshard"
authors = ["Stoneshapp"]
edition = "2021"

[lib]
name = "stoneshapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
